RESOLVED FIXED34825
postMessage does not send ImageData
https://bugs.webkit.org/show_bug.cgi?id=34825
Summary postMessage does not send ImageData
Oliver Hunt
Reported 2010-02-10 18:12:55 PST
postMessage does not send ImageData
Attachments
Patch (17.74 KB, patch)
2010-02-10 22:28 PST, Oliver Hunt
barraclough: review+
Oliver Hunt
Comment 1 2010-02-10 22:28:54 PST
Oliver Hunt
Comment 2 2010-02-11 00:30:43 PST
Note You need to log in before you can comment on or make changes to this bug.