WebCore/bindings/js/SerializedScriptValue.cpp
@@ -29,14 +29,17 @@
 
 #include "File.h"
 #include "FileList.h"
+#include "ImageData.h"
 #include "JSDOMGlobalObject.h"
 #include "JSFile.h"
 #include "JSFileList.h"
+#include "JSImageData.h"
 #include <JavaScriptCore/APICast.h>
 #include <runtime/DateInstance.h>
 #include <runtime/ExceptionHelpers.h>
 #include <runtime/JSLock.h>
 #include <runtime/PropertyNameArray.h>
+#include <wtf/ByteArray.h>
 #include <wtf/HashTraits.h>
 #include <wtf/Vector.h>
 
@@ -165,6 +168,30 @@ private:
     Vector<String> m_files;
 };
 
+class SerializedImageData : public SharedSerializedData {
+public:
+    static PassRefPtr<SerializedImageData> create(const ImageData* imageData)
+    {
+        return adoptRef(new SerializedImageData(imageData));
+    }
+    
+    unsigned width() const { return m_width; }
+    unsigned height() const { return m_height; }
+    WTF::ByteArray* data() const { return m_storage.get(); }
+private:
+    SerializedImageData(const ImageData* imageData)
+        : m_width(imageData->width())
+        , m_height(imageData->height())
+    {
+        WTF::ByteArray* array = imageData->data()->data();
+        m_storage = WTF::ByteArray::create(array->length());
+        memcpy(m_storage->data(), array->data(), array->length());
+    }
+    unsigned m_width;
+    unsigned m_height;
+    RefPtr<WTF::ByteArray> m_storage;
+};
+
 SerializedScriptValueData::SerializedScriptValueData(RefPtr<SerializedObject> data)
     : m_type(ObjectType)
     , m_sharedData(data)
@@ -180,6 +207,12 @@ SerializedScriptValueData::SerializedScriptValueData(RefPtr<SerializedArray> dat
 SerializedScriptValueData::SerializedScriptValueData(const FileList* fileList)
     : m_type(FileListType)
     , m_sharedData(SerializedFileList::create(fileList))
+{
+}
+
+SerializedScriptValueData::SerializedScriptValueData(const ImageData* imageData)
+    : m_type(ImageDataType)
+    , m_sharedData(SerializedImageData::create(imageData))
 {
 }
 
@@ -202,6 +235,11 @@ SerializedObject* SharedSerializedData::asObject()
 SerializedFileList* SharedSerializedData::asFileList()
 {
     return static_cast<SerializedFileList*>(this);
+}
+
+SerializedImageData* SharedSerializedData::asImageData()
+{
+    return static_cast<SerializedImageData*>(this);
 }
 
 static const unsigned maximumFilterRecursion = 40000;
@@ -533,6 +571,8 @@ struct SerializingTreeWalker : public BaseWalker {
                 return SerializedScriptValueData(toFile(obj));
             if (obj->inherits(&JSFileList::s_info))
                 return SerializedScriptValueData(toFileList(obj));
+            if (obj->inherits(&JSImageData::s_info))
+                return SerializedScriptValueData(toImageData(obj));
                 
             CallData unusedData;
             if (value.getCallData(unusedData) == CallTypeNone)
@@ -709,6 +749,14 @@ struct DeserializingTreeWalker : public BaseWalker {
                     result->append(File::create(serializedFileList->item(i)));
                 return toJS(m_exec, static_cast<JSDOMGlobalObject*>(m_globalObject), result.get());
             }
+            case SerializedScriptValueData::ImageDataType: {
+                if (!m_isDOMGlobalObject)
+                    return jsNull();
+                SerializedImageData* serializedImageData = value.asImageData();
+                RefPtr<ImageData> result = ImageData::create(serializedImageData->width(), serializedImageData->height());
+                memcpy(result->data()->data()->data(), serializedImageData->data()->data(), serializedImageData->data()->length());
+                return toJS(m_exec, static_cast<JSDOMGlobalObject*>(m_globalObject), result.get());
+            }
             case SerializedScriptValueData::EmptyType:
                 ASSERT_NOT_REACHED();
                 return jsNull();
@@ -868,6 +916,7 @@ struct TeardownTreeWalker {
             case SerializedScriptValueData::EmptyType:
             case SerializedScriptValueData::FileType:
             case SerializedScriptValueData::FileListType:
+            case SerializedScriptValueData::ImageDataType:
                 return true;
         }
         ASSERT_NOT_REACHED();
